force-app/main/default/objects/QTB_Shred_Profile__c/QTB_Shred_Profile__c.object-meta.xml
<CustomObject>
    <description>CPQ-14:   to store shred profile information</description>
    <label>Shred Profile</label>
    <nameField>
        <label>Shred Profile Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Shred Profiles</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>