force-app/main/default/objects/QTB_Shred_Profile__c/fields/QTB_Average_Distance_to_Depot__c.field-meta.xml
<CustomField>
    <fullName>QTB_Average_Distance_to_Depot__c</fullName>
    <description>#CPQ 14: Average distance to depot from the location</description>
    <label>Average Distance to Depot</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>