force-app/main/default/objects/QTB_Shred_Profile__c/fields/QTB_Expected_Annual_Revenue__c.field-meta.xml
<CustomField>
    <fullName>QTB_Expected_Annual_Revenue__c</fullName>
    <description>#CPQ -14:  to store expected annual revenue</description>
    <label>Expected Annual Revenue</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>