force-app/main/default/objects/QTB_Shred_Profile__c/fields/QTB_Number_of_Bins_Per_Stop__c.field-meta.xml
<CustomField>
    <fullName>QTB_Number_of_Bins_Per_Stop__c</fullName>
    <description>#CPQ 14: Number of bins per stop</description>
    <label>Number of Bins Per Stop</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>