force-app/main/default/objects/QTB_Shred_Profile__c/fields/QTB_Primary_Market__c.field-meta.xml
<CustomField>
    <fullName>QTB_Primary_Market__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>#CPQ 14: to capture primary market on quote</description>
    <label>Market</label>
    <referenceTo>Market__c</referenceTo>
    <relationshipLabel>Shred Profiles</relationshipLabel>
    <relationshipName>Shred_Profiles</relationshipName>
    <type>Lookup</type>
</CustomField>