force-app/main/default/objects/QTB_Shred_Profile__c/fields/QTB_Quote__c.field-meta.xml
<CustomField>
    <fullName>QTB_Quote__c</fullName>
    <description>#CPQ 14:  master details with the quote object so that it inherit the sharing permission from the quote object</description>
    <label>Quote</label>
    <referenceTo>SBQQ__Quote__c</referenceTo>
    <relationshipLabel>Shred Profiles</relationshipLabel>
    <relationshipName>Shred_Profiles</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>