force-app/main/default/objects/QTB_Shred_Profile__c/validationRules/QTB_currency_mismatch.validationRule-meta.xml
<ValidationRule>
    <fullName>QTB_currency_mismatch</fullName>
    <active>true</active>
    <errorConditionFormula>AND(NOT($Setup.Metadata_Activation_Settings__c.Disable_VR__c &amp;&amp;
OR(ISBLANK($Setup.Metadata_Activation_Settings__c.SObject_API_Name__c),
CONTAINS($Setup.Metadata_Activation_Settings__c.SObject_API_Name__c, &apos;QTB_Shred_Profile__c&apos;))),
TEXT(CurrencyIsoCode) &lt;&gt; TEXT(QTB_Quote__r.CurrencyIsoCode))</errorConditionFormula>
    <errorDisplayField>CurrencyIsoCode</errorDisplayField>
    <errorMessage>Currency should be same as Quote Currency</errorMessage>
</ValidationRule>